namespace CrisisConnect.Domain.Enums;

public enum StatutPanier
{
    Ouvert,
    Confirme,
    Annule
}
