namespace CrisisConnect.Domain.Enums;

public enum StatutTransaction
{
    EnAttente,
    Validee,
    Annulee
}
