namespace CrisisConnect.Domain.Enums;

public enum Visibilite
{
    Publique,
    Privee,
    Restreinte
}
